--- a/lab4/front_end/src/styles/Read.scss
+++ b/lab4/front_end/src/styles/Read.scss
@@ -16,10 +16,33 @@
   }
   .sect {
     height: 30px;
-    width: 100px;
+    width: 120px;
     padding: 5px;
     background-color: white;
     border-bottom: 1px solid rgb(142, 142, 142);
+
+    .Delete {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      outline: none;
+      border: none;
+      background-color: rgb(188, 58, 58);
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: 0.4s all;
+      height: 30px;
+      font-family: "Roboto", sans-serif;
+      font-weight: 600;
+
+      &:hover {
+        background-color: rgb(118, 1, 1);
+      }
+      &:active {
+        transform: translateY(10px);
+      }
+    }
   }
   .row {
     background-color: rgb(187, 187, 187);
